docker/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: job-runner
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: job-runner
  type: LoadBalancer
