docker/kubernetes/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: job-runner
spec:
  podSelector:
    matchLabels:
      app: job-runner
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: mysql
        - podSelector:
            matchLabels:
              app: redis
      ports:
        - protocol: TCP
          port: 80
